--- a/less/sections/promociones.less
+++ b/less/sections/promociones.less
@@ -13,7 +13,7 @@
 .page-subtitle {
     font-size: 1.125rem;
     margin-bottom: @spacing-xl;
-    color: @secondary-600; 
+    color: @color-white;
 }
 
 
