--- a/less/style.less
+++ b/less/style.less
@@ -11,6 +11,9 @@
 // Components - Header, footer, buttons, navigation
 @import './components.less';
 
+// Images - Responsive image styles and optimization
+@import './images.less';
+
 // Page-Specific Styles
 @import './sections/index.less';          // Landing page
 @import './sections/ubicaciones.less';    // Locations page
