--- a/src/hbs/partials/blog.hbs
+++ b/src/hbs/partials/blog.hbs
@@ -8,6 +8,9 @@
 
       <div class="blog-grid">
         <article class="blog-article featured">
+          <div class="article-image">
+            <img src="/img/blog/pexels-cottonbro-4489719.jpg" alt="Mantenimiento del vehículo" loading="lazy" class="article-img">
+          </div>
           <div class="article-tags">
             <span class="tag featured-tag">⭐ Destacado</span>
             <span class="tag maintenance">Mantenimiento</span>
@@ -21,6 +24,9 @@
         </article>
 
         <article class="blog-article">
+          <div class="article-image">
+            <img src="/img/blog/pexels-cottonbro-4489747.jpg" alt="Sistema de frenos" loading="lazy" class="article-img">
+          </div>
           <div class="article-tags">
             <span class="tag repairs">Reparaciones</span>
           </div>
