--- a/src/hbs/partials/promociones.hbs
+++ b/src/hbs/partials/promociones.hbs
@@ -13,7 +13,7 @@
                 
                 <article class="promo-card">
                     <div class="promo-img-container">
-                        <img src="/img/promo_frenos.jpg" alt="Kit de Frenos en Promoción">
+                        <img src="/img/promociones/pexels-anastasia-shuraeva-9607353.jpg" alt="Kit de Frenos en Promoción" loading="lazy" class="promo-img">
                     </div>
                     <div class="promo-content">
                         <span class="discount-tag">30% OFF</span>
@@ -26,7 +26,7 @@
 
                 <article class="promo-card">
                     <div class="promo-img-container">
-                        <img src="/img/promo_aceite.jpg" alt="Aceite y Filtros en Promoción">
+                        <img src="/img/promociones/pexels-avinashpatel-445399.jpg" alt="Aceite y Filtros en Promoción" loading="lazy" class="promo-img">
                     </div>
                     <div class="promo-content">
                         <span class="discount-tag">2x1 en Filtros</span>
@@ -39,7 +39,7 @@
 
                 <article class="promo-card">
                     <div class="promo-img-container">
-                        <img src="/img/promo_bateria.jpg" alt="Baterías en Promoción">
+                        <img src="/img/promociones/pexels-chris-f-38966-17900500.jpg" alt="Baterías en Promoción" loading="lazy" class="promo-img">
                     </div>
                     <div class="promo-content">
                         <span class="discount-tag is-secondary">ENVÍO GRATIS</span>
