--- a/less/sections/faq.less
+++ b/less/sections/faq.less
@@ -1,6 +1,75 @@
+// Hero Section - FAQ
+.faq-hero {
+    background-image: url('/img/heroes/pexels-mikebirdy-190574.jpg');
+    background-size: cover;
+    background-position: center;
+    padding: 6rem 2rem;
+    text-align: center;
+    position: relative;
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: rgba(0, 0, 0, 0.5);
+    }
+
+    .container {
+        position: relative;
+        z-index: 2;
+    }
+
+    .page-title {
+        font-size: 3rem;
+        color: @color-white;
+        margin-bottom: 1rem;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+    }
+
+    .page-subtitle {
+        font-size: 1.25rem;
+        color: @color-white;
+        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+    }
+
+    @media (max-width: @breakpoint-tablet) {
+        padding: 4rem 1rem;
+
+        .page-title {
+            font-size: 2.2rem;
+        }
+
+        .page-subtitle {
+            font-size: 1rem;
+        }
+    }
+
+    @media (max-width: @breakpoint-mobile) {
+        padding: 3rem 1rem;
+
+        .page-title {
+            font-size: 1.8rem;
+        }
+
+        .page-subtitle {
+            font-size: 0.9rem;
+        }
+    }
+}
+
 .faq {
   padding: @spacing-xl 0;
   background-color: @color-background;
+
+  .section-title {
+    text-align: center;
+    font-size: 2rem;
+    margin-bottom: @spacing-lg;
+    color: @secondary-800;
+  }
 
   &__title {
     font-size: 2.5rem;
