--- a/src/hbs/partials/noticias.hbs
+++ b/src/hbs/partials/noticias.hbs
@@ -13,7 +13,7 @@
                 
                 <article class="post-excerpt">
                     <div class="post-image">
-                        <img src="/img/noticia_aceite.jpg" alt="Motor y cambio de aceite">
+                        <img src="/img/noticias/pexels-benjamin-walsham-159059246-11074558.jpg" alt="Motor y cambio de aceite" loading="lazy" class="post-img">
                     </div>
                     <div class="post-body">
                         <p class="post-meta">Categoría: Mantenimiento | 01 de Dic, 2025</p>
@@ -25,7 +25,7 @@
 
                 <article class="post-excerpt">
                     <div class="post-image">
-                        <img src="/img/noticia_frenos.jpg" alt="Frenos ABS">
+                        <img src="/img/noticias/pexels-bertellifotografia-10182903.jpg" alt="Frenos ABS" loading="lazy" class="post-img">
                     </div>
                     <div class="post-body">
                         <p class="post-meta">Categoría: Tecnología | 25 de Nov, 2025</p>
