Commit Final Final

--- a/less/sections/promociones.less
+++ b/less/sections/promociones.less
@@ -16,6 +16,10 @@
     color: @color-white;
 }
 
+.promociones-subtitle {
+    color: @secondary-800;
+}
+
 
 .promo-card {
     border: 1px solid @secondary-200;
