--- a/src/hbs/partials/promociones.hbs
+++ b/src/hbs/partials/promociones.hbs
@@ -2,7 +2,7 @@
     <section class="promociones-hero">
         <div class="container">
             <h1 class="page-title">Ofertas Exclusivas de Repuestos AutoKNLS</h1>
-            <p class="page-subtitle">Aprovecha nuestras ofertas exclusivas en las piezas más necesarias para tu vehículo.</p>
+            <p class="page-subtitle promociones-subtitle">Aprovecha nuestras ofertas exclusivas en las piezas más necesarias para tu vehículo.</p>
         </div>
     </section>
 
